# MSTEx-CVL

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeUser.cmake  CMakeUserGit.cmake  README  README.md
DkCore/: DkAttr.cpp  DkAttr.h  DkBlobs.cpp  DkBlobs.h  DkError.cpp  DkError.h  DkIP.h  DkImageSource.cpp  DkImageSource.h  DkMath.cpp  DkMath.h  DkTimer.h  DkUtils.cpp  DkUtils.h
DkModule/: DkAce.cpp  DkAce.h  DkFeature.cpp  DkFeature.h  DkFeatureExtraction.cpp  DkFeatureExtraction.h  DkGrabCut.cpp  DkGrabCut.h  DkMSData.cpp  DkMSData.h  DkMSModule.cpp  DkMSModule.h  DkMachineLearning.cpp  DkMachineLearning.h  DkModule.cpp  DkModule.h  DkModuleInclude.h  DkMvModule.cpp  DkMvModule.h  DkObjectRecognition.cpp  DkObjectRecognition.h  DkQuantization.cpp  DkQuantization.h  DkRandomTrees.cpp  DkRandomTrees.h  DkRgbModule.cpp  DkRgbModule.h  DkSegmentation.cpp  DkSegmentation.h  DkSegmentationModule.cpp  DkSegmentationModule.h  DkSlidingWindow.cpp  DkSlidingWindow.h
DkNomacs/: DkBase.cpp  DkBase.h  DkBaseBerlinger.cpp  DkBaseBerlinger.h  DkBaseMS.cpp  DkBaseMS.h  DkNomacs.aps  DkNomacs.rc  DkSnippetNoMacsInclude.h  config.conf  dknomacs.qrc  main.cpp  resource.h
DkNomacs/mem/: CMyCallStack.cpp  CMyCallStack.h  StackWalker.cpp  StackWalker.h  memmgr.cpp  memmgr.h
DkPlugin/: CMakeLists.txt  package.xml
DkPlugin/src/: DkMstex.cpp  DkMstex.h  DkMstex.json  nomacsPlugin.qrc
DkViennaMS/: main.cpp
cmake/: DependencyCollector.py  Utils.cmake  ViennaMS.cmake
